css: various visibility and clarity fixes

--- a/yagpdb_nord.css
+++ b/yagpdb_nord.css
@@ -77,14 +77,7 @@
 		    background-color: transparent !important;
 		    color: var(--nord7) !important;
 		}
-		&.premium-color {/* due to specificity issues from using !important everywhere */
-		    color: var(--nord13-darker) !important;
-		}
 	}
-
-	.premium-color {
-        color: var(--nord13-darker) !important;
-    }
 
 	code {
 		color: var(--nord7) !important;
@@ -411,16 +404,22 @@
 		background-color: var(--nord1) !important;
 	}
 
-	.nav-parent, .nav-expanded {
+	.nav-parent {
 		background-color: var(--nord0) !important;
 		color: var(--nord4) !important;
+		&.nav-expanded > a {
+		    background-color: var(--nord1) !important;
+		}
 	}
 
 	.nav-tabs > .nav-item {
 		color: var(--nord4) !important;
 		background-color: var(--nord0) !important;
-		border-top-color: var(--nord3) !important;
-		& > a, & > a:hover, & .active {
+		& > a {
+		    background-color: var(--nord0) !important;
+		    border-top-color: var(--nord1) !important;
+		}
+		& > a:hover, & .active {
 		    border-top-color: var(--nord7) !important;
 		    background-color: var(--nord1) !important;
 		    color: var(--nord7) !important;
